--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/index.html
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <h1>Author Catalog</h1>
 
+    <table>
+        <thead>
+            <tr>
+                <th> authorId</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody id="resultarea">
+            
+        </tbody>
+    </table>
 
     <script src="script.js"></script>
 </body>
