lenting.html added

--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/index.html
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Please choose one!</h1>
     <div id="buttons">
-        <button onclick="AuthorPage()">Authors</button>
-        <button onclick="LentingPage()">Lentings</button>
-        <button onclick="BookPage()">Books</button>
-        <button onclick="StatisticsPage()">Statistics</button>       
+        <button onclick="window.location.href='author.html';">Authors</button>
+        <button onclick="window.location.href='lenting.html';">Lentings</button>
+        <button onclick="window.location.href='book.html';">Books</button>
+        <button onclick="window.location.href='statistics.html';">Statistics</button>       
     </div>
     <script src="indexScript.js"></script>
 </body>
