Added Back button

--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/lenting.html
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/lenting.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lenting Catalog</h1>
-
+    <button onclick="" window.location.href='index.html' ;">Back</button>
     <div id="formdiv">
         <label>Lenting Name</label>
         <input type="text" id="lentingname" />
