--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/author.html
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/author.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Author Catalog</h1>
-
+    <button onclick="" window.location.href='index.html' ;">Back</button>
     <div id="formdiv">
         <label>Author Name</label>
         <input type="text" id="authorname" />
