--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/book.html
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/book.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Book Catalog</h1>
-    <button onclick="" window.location.href='index.html' ;">Back</button>
+    <button onclick=" window.location.href='index.html' ;">Back</button>
     <div id="formdiv">
         <label>Book Title</label>
         <input type="text" id="booktitle" />
